synchronized lock upgrade process